--- a/finland.html
+++ b/finland.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Finland</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Finland</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="sverige.html">Sverige</a></li>
-                <li><a href="norge.html">Norge</a></li>
-                <li><a href="danmark.html">Danmark</a></li>
-                <li><a href="island.html">Island</a></li>
-            </ul>
-        </nav>
+        <p>Välkommen till Finlands sida!</p>
     </header>
-    <main>
-        <h2>Information om Finland</h2>
-        <p>Finland är känt för sina tusentals sjöar, vacker natur och designtraditioner.</p>
-    </main>
+    <section>
+ 
+        <img src="Bilder/finland.png" alt="Finlands flagga">
+        <p>Finland är känt för sina tusentals sjöar och vackra skogar.</p>
+        <h2>Om Finland</h2>
+    </section>
     <footer>
-        <p>&copy; 2024 Länder</p>
+        <p><a href="index.html">Tillbaka till startsidan</a></p>
     </footer>
 </body>
 </html>
