--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Länder</title>
+    <title>Countries</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Välkommen till länder</h1>
-        <nav>
-            <ul>
-                <li><a href="sverige.html">Sverige</a></li>
-                <li><a href="norge.html">Norge</a></li>
-                <li><a href="danmark.html">Danmark</a></li>
-                <li><a href="finland.html">Finland</a></li>
-                <li><a href="island.html">Island</a></li>
-            </ul>
-        </nav>
+        <h1>Välkommen till Norden</h1>
+        <p>Utforska information om olika länder.</p>
     </header>
-    <main>
-        <h2>Upptäck våra nordiska grannländer!</h2>
-        <p>Välj ett land ovan för att lära dig mer.</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 Länder</p>
-    </footer>
+    <nav>
+        <ul>
+            <li><a href="sverige.html">Sverige</a></li>
+            <li><a href="norge.html">Norge</a></li>
+            <li><a href="finland.html">Finland</a></li>
+            <li><a href="danmark.html">Danmark</a></li>
+            <li><a href="island.html">Island</a></li>
+        </ul>
+    </nav>
+    </div>
+ 
 </body>
 </html>
