--- a/island.html
+++ b/island.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Island</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Island</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="sverige.html">Sverige</a></li>
-                <li><a href="norge.html">Norge</a></li>
-                <li><a href="danmark.html">Danmark</a></li>
-                <li><a href="finland.html">Finland</a></li>
-            </ul>
-        </nav>
+        <p>Välkommen till Islands sida!</p>
     </header>
-    <main>
-        <h2>Information om Island</h2>
-        <p>Island är känt för sina geotermiska underverk, vulkaner och majestätiska landskap.</p>
-    </main>
+    <section>
+        
+        <img src="Bilder/island.png" alt="Islands flagga">
+        <p>Island är känt för sina vulkaner, gejsrar och varma källor.</p>
+        <h2>Om Island</h2>
+    </section>
     <footer>
-        <p>&copy; 2024 Länder</p>
+        <p><a href="index.html">Tillbaka till startsidan</a></p>
     </footer>
 </body>
 </html>
