--- a/norge.html
+++ b/norge.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Norge</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Norge</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="sverige.html">Sverige</a></li>
-                <li><a href="danmark.html">Danmark</a></li>
-                <li><a href="finland.html">Finland</a></li>
-                <li><a href="island.html">Island</a></li>
-            </ul>
-        </nav>
+        <p>Välkommen till Norges sida!</p>
     </header>
-    <main>
-        <h2>Information om Norge</h2>
-        <p>Norge är känt för sina fjordar och vackra landskap.</p>
-    </main>
+    <section>
+        
+        <img src="Bilder/norge.png" alt="Norges flagga">
+        <p>Norge är känt för sina fjordar och spektakulära landskap.</p>
+        <h2>Om Norge</h2>
+    </section>
     <footer>
-        <p>&copy; 2024 Länder</p>
+        <p><a href="index.html">Tillbaka till startsidan</a></p>
     </footer>
 </body>
 </html>
