--- a/sverige.html
+++ b/sverige.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Sverige</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Sverige</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="norge.html">Norge</a></li>
-                <li><a href="danmark.html">Danmark</a></li>
-                <li><a href="finland.html">Finland</a></li>
-                <li><a href="island.html">Island</a></li>
-            </ul>
-        </nav>
+        <p>Välkommen till Sveriges sida!</p>
     </header>
-    <main>
-        <h2>Information om Sverige</h2>
-        <p>Sverige är känt för sin naturskönhet och sin välfärdsmodell.</p>
-    </main>
+    <section>
+
+        <img src="Bilder/sverige.png" alt="Sveriges flagga">
+        <h2>Om Sverige</h2>
+        <p>Sverige är ett land i norra Europa, känt för sin vackra natur och kultur.</p>
+    </section>
     <footer>
-        <p>&copy; 2024 Länder</p>
+        <p><a href="index.html">Tillbaka till startsidan</a></p>
     </footer>
 </body>
 </html>
